[package]
name = "crypt-ro"
version = "0.1.0"
edition = "2024"
description = "Blazing-fast matrix-based encryption library with configurable transformations"
license = "MIT OR Apache-2.0"
authors = ["Kak Smko <ba.smko@example.com>"]
repository = "https://github.com/kak-smko/crypt-ro"
documentation = "https://docs.rs/crypt-ro"
readme = "README.md"
keywords = ["encryption", "crypto", "encrypt", "decrypt", "security"]
categories = ["cryptography", "algorithms"]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
base64 = "0.22.1"
rand = "0.9.1"


[dev-dependencies]
criterion = "0.5.1"
rsa = "0.9.8"
rand_core = "0.6.4"
aes-gcm = "0.10.1"

[[bench]]
name = "cryptor_bench"
harness = false